--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "mustache-express": "^1.3.2"
   }
 }
